feat: adjust chart update workflow

--- a/.github/workflows/chart-update.yaml
+++ b/.github/workflows/chart-update.yaml
@@ -70,6 +70,9 @@ jobs:
           branch: "chart-autoupdate-${{ steps.deps-update.outputs.update-type }}-argocd"
           labels: "chart-autoupdate-${{ steps.deps-update.outputs.update-type }}"
         with:
+          base: ${{ github.head_ref }}
+          signoff: true
+          reviewers: ["GersonRS"]
           commit-message: ${{ env.pr-title }}
           author: ${{ env.author }}
           committer: ${{ env.author }}
@@ -95,6 +98,9 @@ jobs:
           # unlike the previous step, which can either be a patch, minor or major update.
           pr-title: "feat(chart)!: major update of dependencies on argocd chart"
         with:
+          base: ${{ github.head_ref }}
+          signoff: true
+          reviewers: ["GersonRS"]
           commit-message: ${{ env.pr-title }}
           author: ${{ env.author }}
           committer: ${{ env.author }}
@@ -146,6 +152,9 @@ jobs:
           branch: "chart-autoupdate-${{ steps.deps-update.outputs.update-type }}-argocd"
           labels: "chart-autoupdate-${{ steps.deps-update.outputs.update-type }}"
         with:
+          base: ${{ github.head_ref }}
+          signoff: true
+          reviewers: ["GersonRS"]
           commit-message: ${{ env.pr-title }}
           author: ${{ env.author }}
           committer: ${{ env.author }}
@@ -171,6 +180,9 @@ jobs:
           # unlike the previous step, which can either be a patch, minor or major update.
           pr-title: "feat(chart)!: major update of dependencies on argocd chart"
         with:
+          base: ${{ github.head_ref }}
+          signoff: true
+          reviewers: ["GersonRS"]
           commit-message: ${{ env.pr-title }}
           author: ${{ env.author }}
           committer: ${{ env.author }}
