--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,3 +6,8 @@ updates:
     schedule:
       # Check for updated GitHub Actions every week
       interval: "weekly"
+
+    commit-message:
+      prefix: "build"
+      prefix-development: "build"
+      include: "scope"
