feat: adjust release-please config file

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -4,6 +4,5 @@
   "extra-files": [
     "variables.tf"
   ],
-  "pull-request-title-pattern": "chore: release ${version}",
-  "release-type": "simple"
+  "pull-request-title-pattern": "chore: release ${version}"
 }
