feat: config release-please

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -3,6 +3,8 @@
   "packages": {
     ".": {
       "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": false,
+      "changelog-path": "CHANGELOG.md",
       "changelog-sections": [
         {
           "hidden": false,
@@ -70,9 +72,11 @@
           "type": "ci"
         }
       ],
+      "draft": false,
       "extra-files": [
         "variables.tf"
       ],
+      "prerelease": false,
       "release-type": "simple"
     }
   }
