--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -77,6 +77,7 @@
         "variables.tf"
       ],
       "prerelease": false,
+      "pull-request-title-pattern": "chore: release ${version}",
       "release-type": "simple"
     }
   }
