--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -3,14 +3,12 @@
 argo-cd:
   controller:
     metrics:
-      serviceMonitor:
-        enabled: true
       rules:
         enabled: true
         spec:
           - alert: ArgoAppMissing
             expr: |
-              absent(argocd_app_info)
+              absent(argocd_app_info) == 1
             for: 15m
             labels:
               severity: critical
@@ -20,17 +18,15 @@ argo-cd:
                 Argo CD has not reported any applications data for the past 15 minutes which
                 means that it must be down or not functioning properly.  This needs to be
                 resolved for this cloud to continue to maintain state.
-          - alert: ArgoCDSync
-            expr: label_replace(argocd_app_info{sync_status!="Synced"}, "namespace", "$1", "dest_namespace", "(.*)") > 0
-            for: 60m
+          - alert: ArgoAppNotSynced
+            expr: |
+              argocd_app_info{sync_status!="Synced"} == 1
+            for: 12h
             labels:
               severity: warning
             annotations:
-              summary: "{{ $labels.name }} application not synchronized"
-              description: |
-                {{ "Sync status: {{ $labels.sync_status }}" }}
-                {{ "Health status: {{ $labels.health_status }}" }}
-                {{ "Namespace: {{ $labels.dest_namespace }}" }}
-                {{ "Application: {{ $labels.name }}" }}
-                {{ "Project: {{ $labels.project }}" }}
-                {{ "Repository: {{ $labels.repo }}" }}
+              summary: "[{{`{{$labels.name}}`}}] Application not synchronized"
+              description: >
+                The application [{{`{{$labels.name}}`}} has not been synchronized for over
+                12 hours which means that the state of this cloud has drifted away from the
+                state inside Git.
